@startuml
'https://plantuml.com/class-diagram

entity Product {
    *id
    *price
    *stock
    *name
    *category
    *status
    description
}

entity User {
    *id
    *email
    --
    name
    lastname
}

entity SellingInfo {
    *id
    *type
    --
    name
}

entity Purchase {
    *id
    *status
    *quantity
    *price
}

User --> SellingInfo

User <|-- Product : seller

Purchase --|> Product

Purchase --|> User : buyer

@enduml